  * Removed redundant information from world selection dialog
  * Added support for opening arbitrary dimensions (for mods right now,
    will also be needed for the eventual official Sky Dimension)
  * Added support for block IDs > 127 (for mods, primarily)
  * Blocks which orient differently based on direction will default to
    North now, if we see data values we don't understand

Minecraft X-Ray 3.2.1 (2011.08.18)

  * Some mods appear to get rid of misc/water.png, which occasionally
    causes problems.  Updated to generate our own if needed.

Minecraft X-Ray 3.2.0 (2011.07.01)

  * Support for new Beta 1.7 block - Pistons
  * Better rendering for beds, cakes, furnaces, dispensers, pumpkins,
    jack-o-lanterns, chests, workbenches, jukeboxes, TNT, wood,
	bookshelves, grass, and sandstone
  * Tweaked grass/leaf color a bit
  * Toggle between new and old grass rendering with the "G" key
  * "Other" dialog will now let you choose level.dat, in addition to
    just choosing the directory

Minecraft X-Ray 3.1.1 (2011.06.22)

  * Support mod installations (such as TooManyItems on OSX) which replace
    minecraft.jar with a directory

Minecraft X-Ray 3.1.0 (2011.05.26)

  * Update with new Beta 1.6 blocks (trapdoors, tall grass, shrubs)
  * (internal) Changed how we generate the Portal texture

Minecraft X-Ray 3.0.1 (2011.04.24)

  * Fix torch rendering for non-default texture packs, under some
    circumstances.
  * Fix a potential Exception for people running mods like More
    Block IDs

Minecraft X-Ray 3.0.0 (2011.04.21)

  * Render the appropriate sapling sprite 100% of the time
  * Show a purple box for unknown blocks, rather than empty space
  * Fixed the disappearing Render Details window when toggling between
    Nether and back
  * Handle invalid level.dat files more gracefully
  * Render mushrooms, flowers, and sugarcane as a "cross," more like
    it's done in Minecraft itself
  * Switched Stone Pressure Plate and Stone Button textures to use