@@ -273,7 +273,8 @@ public class MineCraftConstants {
 		TOGGLE_ACCURATE_GRASS (Keyboard.KEY_G),
 		TOGGLE_WATER (Keyboard.KEY_T),
 		TOGGLE_HIGHLIGHT_EXPLORED (Keyboard.KEY_E),
-		SWITCH_NETHER (Keyboard.KEY_N),
+		DIMENSION_NEXT (Keyboard.KEY_N),
+		DIMENSION_PREV (Keyboard.KEY_P),
 		CHUNK_RANGE_1 (Keyboard.KEY_NUMPAD1),
 		CHUNK_RANGE_2 (Keyboard.KEY_NUMPAD2),
 		CHUNK_RANGE_3 (Keyboard.KEY_NUMPAD3),
