@@ -1,6 +1,7 @@
   * Removed redundant information from world selection dialog
   * Added support for opening arbitrary dimensions (for mods right now,
-    will also be needed for the eventual official Sky Dimension)
+    will also be needed for the eventual official Sky Dimension).  "N"
+	now jumps to the next dimension, "P" jumps to the previous.
   * Added support for block IDs > 127 (for mods, primarily)
   * Blocks which orient differently based on direction will default to
     North now, if we see data values we don't understand
